Fix buttons in iOS Safari Buttons were too tall with the extra text

--- a/scss/events.scss
+++ b/scss/events.scss
@@ -95,7 +95,7 @@ body {
 // Size the images in the events section
 .event-img {
 	min-height: 150px;
-	min-width: 200px;
+	min-`width: 200px;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
